<resources>
    <string name="app_name">Zipline</string>
    <string name="version_string">v%s</string>
    <string name="version_code_string">%1$s (%2$s)</string>
    <string name="welcome_username">Welcome, %s</string>
    <string name="setup_zipline_text">Enter your <![CDATA[<a href="https://github.com/diced/zipline">Zipline v4 Server</a>]]> Details.</string>

    <string name="website_url">https://zipline-android.cssnr.com/</string>
    <string name="website_link"><![CDATA[<a href="https://zipline-android.cssnr.com/">%s</a>]]></string>
    <string name="github_url">https://github.com/cssnr/zipline-android</string>
    <string name="github_link"><![CDATA[<a href="https://github.com/cssnr/zipline-android">%s</a>]]></string>
    <string name="discussions_url">https://github.com/cssnr/zipline-android/discussions</string>
    <string name="discussions_link"><![CDATA[<a href="https://github.com/cssnr/zipline-android/discussions">%s</a>]]></string>
    <string name="issues_url">https://github.com/cssnr/zipline-android/issues</string>
    <string name="issues_link"><![CDATA[<a href="https://github.com/cssnr/zipline-android/issues">%s</a>]]></string>
    <string name="zipline_url">https://github.com/diced/zipline</string>
    <string name="zipline_link"><![CDATA[<a href="https://github.com/diced/zipline">%s</a>]]></string>

    <string name="hostname">Hostname</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="preview">Preview</string>
    <string name="share">Share</string>
    <string name="open">Open</string>
    <string name="options">Options</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="vanity">Vanity</string>
    <string name="upload">Upload</string>
    <string name="upload_file">Upload File</string>
    <string name="upload_text">Upload Text</string>
    <string name="file_name">File Name</string>
    <string name="shorten_url">Shorten URL</string>
    <string name="url_hint">URL to Shorten</string>
    <string name="file_list">File List</string>

    <string name="tst_upload_error">Error Uploading!</string>
    <string name="tst_no_url">URL Not Set!</string>
    <string name="tst_uploading_file">Uploading File…</string>
    <string name="tst_copied_clipboard">Copied to Clipboard</string>

    <plurals name="files_selected_total">
        <item quantity="one">%1$d / %2$d File</item>
        <item quantity="other">%1$d / %2$d Files</item>
    </plurals>
    <plurals name="files_total">
        <item quantity="one">%d File</item>
        <item quantity="other">%d Files</item>
    </plurals>
    <plurals name="upload_multi">
        <item quantity="one">Upload %d File</item>
        <item quantity="other">Upload %d Files</item>
    </plurals>

    <string name="background_opacity">Background Opacity %d</string>
    <string name="image_compression">Image Compression %d%%</string>

    <string-array name="file_name_format_entries">
        <item>Random</item>
        <item>Date</item>
        <item>UUID</item>
        <item>Name</item>
        <item>Gfycat</item>
    </string-array>
    <string-array name="file_name_format_values">
        <item>random</item>
        <item>date</item>
        <item>uuid</item>
        <item>name</item>
        <item>gfycat</item>
    </string-array>

    <string-array name="launcher_entries">
        <item>Home Web View</item>
        <item>Show File List</item>
    </string-array>
    <string-array name="launcher_values">
        <item>home</item>
        <item>files</item>
    </string-array>

    <string-array name="work_interval_entries">
        <item>Disabled</item>
        <item>15 Minutes</item>
        <item>30 Minutes</item>
        <item>1 Hour</item>
        <item>2 Hours</item>
        <item>4 Hours</item>
        <item>6 Hours</item>
        <item>12 Hours</item>
        <item>1 Day</item>
        <item>2 Days</item>
        <item>3 Days</item>
        <item>1 Week</item>
    </string-array>
    <string-array name="work_interval_values">
        <item>0</item>
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>120</item>
        <item>240</item>
        <item>360</item>
        <item>720</item>
        <item>1440</item>
        <item>2880</item>
        <item>4320</item>
        <item>10080</item>
    </string-array>

    <string-array name="widget_color_entries">
        <item>White</item>
        <item>Black</item>
        <item>Liberty</item>
    </string-array>
    <string-array name="widget_color_values">
        <item>white</item>
        <item>black</item>
        <item>liberty</item>
    </string-array>
</resources>
