<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/nav_site">
        <item
            android:id="@+id/nav_item_home"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/app_name"
            android:checkable="true" />
        <item
            android:id="@+id/nav_item_upload"
            android:icon="@drawable/md_upload_24px"
            android:title="@string/upload" />
    </group>

    <group android:id="@+id/nav_app">
        <item
            android:id="@+id/nav_item_settings"
            android:icon="@drawable/md_settings_24px"
            android:title="@string/settings"
            android:checkable="true" />
    </group>

    <item
        android:id="@+id/nav_item_none"
        android:title=""
        android:enabled="false"
        android:visible="false"
        android:checkable="true" />

</menu>
