<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="HardcodedText">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="12dp"
    android:clipChildren="false"
    android:clipToPadding="false">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:gravity="center_vertical">
        <ImageView
            android:id="@+id/app_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/ic_launcher" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:text="@string/app_name" />
            <TextView
                android:id="@+id/app_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:text=""
                tools:text="v0.0.1"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/server_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:text="Enter your Zipline v4 Server Details." />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintWidth_max="488dp"
        android:orientation="vertical">
        <EditText
            android:id="@+id/login_hostname"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:padding="10dp"
            android:autofillHints=""
            android:hint="@string/hostname"
            android:inputType="textUri"
            android:drawableEnd="@drawable/md_http_24px"
            android:drawableTint="?android:attr/textColorTertiary" />
        <EditText
            android:id="@+id/login_username"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:padding="10dp"
            android:autofillHints="username"
            android:hint="@string/username"
            android:inputType="text"
            android:drawableEnd="@drawable/md_person_24px"
            android:drawableTint="?android:attr/textColorTertiary" />
        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:padding="10dp"
            android:autofillHints="password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:drawableEnd="@drawable/md_key_24px"
            android:drawableTint="?android:attr/textColorTertiary" />
        <EditText
            android:id="@+id/login_code"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:padding="10dp"
            android:autofillHints=""
            android:hint="Two-Factor Code"
            android:inputType="number"
            android:maxLength="6"
            android:drawableEnd="@drawable/md_password_2_24px"
            android:drawableTint="?android:attr/textColorTertiary"
            android:visibility="gone"
            tools:visibility="visible" />
    </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/login_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:maxLines="4"
        android:ellipsize="end"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/holo_red_light"
        android:text="Login Failed"
        android:visibility="invisible"
        tools:visibility="visible"
        tools:text="A really long error message because that is probably what will happen here..."/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintWidth_max="320dp"
        android:orientation="vertical">
        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:text="@string/login"
            app:icon="@drawable/md_login_24px"
            app:iconGravity="end"
            app:iconPadding="-24dp"
            app:iconSize="24dp" />
        <Button
            android:id="@+id/headers_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:text="Custom Headers"
            app:icon="@drawable/md_credit_card_gear_24px"
            app:iconGravity="end"
            app:iconPadding="-18dp"
            app:iconSize="18dp" />
        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/toggle_debug_logs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="6dp"
            android:text="Debug Logging"
            app:thumbIcon="@drawable/md_bug_report_24px"
            tools:checked="true"
            tools:ignore="RtlSymmetry" />
        <Button
            android:id="@+id/debug_logging"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:text="Debug Logs"
            android:visibility="gone"
            app:icon="@drawable/md_manage_search_24px"
            app:iconGravity="end"
            app:iconPadding="-18dp"
            app:iconSize="18dp"
            tools:visibility="visible" />
    </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:id="@+id/website_link"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="?attr/colorPrimary"
            android:text="View Docs and Get Support"
            android:tag="@string/website_url"
            android:drawablePadding="8dp"
            app:drawableStartCompat="@drawable/md_captive_portal_24px" />
        <TextView
            android:id="@+id/github_link"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="?attr/colorPrimary"
            android:text="View Source Code on GitHub"
            android:tag="@string/github_url"
            android:drawablePadding="8dp"
            app:drawableStartCompat="@drawable/fa_github" />
    </LinearLayout>

</LinearLayout>
</ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
