<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/content_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="4dp"
        android:gravity="top"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/bottom_layout">
        <FrameLayout
            android:id="@+id/image_holder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="4dp"
            android:background="@drawable/edit_text_border"
            android:visibility="gone"
            tools:visibility="visible">
            <ImageView
                android:id="@+id/image_preview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/preview"
                android:scaleType="fitCenter" />
            <TextView
                android:id="@+id/image_overlay_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:background="@android:color/transparent"
                android:visibility="gone"
                tools:text="text/comma-separated-values"
                tools:visibility="visible" />
        </FrameLayout>
        <androidx.media3.ui.PlayerView
            android:id="@+id/player_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            app:show_buffering="always"
            app:show_shuffle_button="false"
            app:resize_mode="fit"
            tools:visibility="gone" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/bottom_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="8dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <EditText
            android:id="@+id/file_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="File Name"
            android:ellipsize="end"
            android:gravity="center"
            android:hint="@string/file_name"
            android:inputType="textNoSuggestions"
            android:maxLines="1"
            android:singleLine="true"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            tools:text="test_file.jpg" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.constraintlayout.helper.widget.Flow
                android:id="@+id/flow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="upload_options,folder_button,share_button,options_button"
                app:flow_wrapMode="chain"
                app:flow_horizontalGap="4dp"
                app:flow_verticalGap="4dp"
                app:flow_horizontalAlign="center"
                app:flow_maxElementsWrap="8"
                app:layout_constraintTop_toTopOf="parent" />
            <Button
                android:id="@+id/upload_options"
                android:layout_width="72dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/holo_green_dark"
                app:icon="@drawable/md_subtitles_gear_24px"
                app:iconSize="24dp"
                app:iconGravity="textStart"
                app:iconPadding="0dp" />
            <Button
                android:id="@+id/folder_button"
                android:layout_width="72dp"
                android:layout_height="wrap_content"
                app:icon="@drawable/md_folder_24px"
                app:iconSize="24dp"
                app:iconGravity="textStart"
                app:iconPadding="0dp" />
            <Button
                android:id="@+id/share_button"
                android:layout_width="72dp"
                android:layout_height="wrap_content"
                app:icon="@drawable/md_share_24px"
                app:iconSize="24dp"
                app:iconGravity="textStart"
                app:iconPadding="0dp" />
            <Button
                android:id="@+id/options_button"
                android:layout_width="72dp"
                android:layout_height="wrap_content"
                app:icon="@drawable/md_settings_24px"
                app:iconSize="24dp"
                app:iconGravity="textStart"
                app:iconPadding="0dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/upload_button"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginBottom="4dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:text="@string/upload_file"
            app:icon="@drawable/md_upload_24px"
            app:iconGravity="end"
            app:iconPadding="-28dp"
            app:iconSize="28dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
